Added about, footer

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title:            Clean+Simple Theme
-description:      Something...
+title:            Daniele Grattarola
+description:      A blog about AI, reccommendation systems, and whatever comes to my mind...
        
 
 future:      false  # publish future dated posts --  true, false (default) 
