* Changed "Papers" to "Projects" * Minor graphical changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Daniele Grattarola
-description:      A blog about AI, reccommendation systems, and whatever comes to my mind...
+description:      A blog about AI, recommender systems, and other interesting stuff.
        
 
 future:      false  # publish future dated posts --  true, false (default) 
