* Update config * Minor changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            Daniele Grattarola
-description:      A blog about AI, recommender systems, and other interesting stuff.  
+description:      A blog about AI and other interesting stuff.  
 author:           Daniele Grattarola
 twitter:
     username: riceasphait
